<resources>

    <string name="app_name">BIKE JANU</string>
    <string name="btn_Indice">CONSULTAR ESTATÍSTICAS</string>
    <string name="btn_Cadastro">CONSULTAR BIKE</string>
    <string name="btn_Login">ENTRAR</string>
    <string name="txt_Bike_Janu">Bike Janu</string>
    <string name="txt_Boas_Vindas">Junte-se a nós e faça desta família!</string>
    <string name="btn_Entrar">ENTRAR</string>
    <string name="text_boasVindas">Junte-se a nós e faça parte desta família!</string>
    <string name="btn_Consultar_Bike">CONSULTAR BIKE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_cadastre">CADASTRE-SE</string>
    <string name="textBikeJanu">Bike Janu</string>
    <string name="title_activity_cadastro_usuario">CadastroUsuario</string>
    <string name="title_activity_entrar">Entrar</string>
    <string name="tab_text_1">ENTRAR</string>
    <string name="tab_text_2">CADASTRE-SE</string>
    <string name="action_settings">Settings</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="btnlogar">LOGAR</string>
    <string name="btnCadastro">CADASTRAR</string>
    <string name="campoDigiteSeuNome">Digite Seu Nome</string>
    <string name="title_activity_consultar__bike">Consultar_Bike</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_area_usuario">Bikes Cadastradas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="titulo">Nova Bike</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_maps_roubos">Map</string>
    <string name="title_activity_estatisticas">Estatísticas</string>


    <string-array name="countries">


        <item>Aeroporto</item>
        <item>Alameda</item>
        <item>Alto Cemitério</item>
        <item>Alto dos Pocões</item>
        <item>Alvorada</item>


        <item>Bandeirantes</item>
        <item>Bela Vista</item>
        <item>Boa Esperança</item>
        <item>Boa Vista</item>

        <item>Brejo do Amparo</item>

        <item>Caic</item>
        <item>Centro</item>
        <item>Cerâmica</item>

        <item>Eldorado</item>

        <item>Fabião</item>
        <item>Franklin</item>


        <item>Januária</item>
        <item>Jardim Daniel</item>
        <item>Jardim Estela</item>
        <item>Jatobá</item>
        <item>Joventina Mesquita</item>
        <item>Jussara</item>

        <item>Levianopolis</item>

        <item>Mangueiras</item>
        <item>Margarete</item>
        <item>Moradeiras</item>

        <item>Norma Consuelo</item>
        <item>Novo Milênio</item>

        <item>Quinta Mangabeiras</item>

        <item>Riacho da Cruz</item>

        <item>São João</item>
        <item>São Joaquim</item>
        <item>São Miguel</item>
        <item>São Vicente</item>
        <item>Sagrada Família</item>
        <item>Santa Cruz</item>
        <item>Santa Isabel</item>
        <item>Sede</item>

        <item>Tejuco</item>
        <item>Terceiro Milênio</item>
        <item>Tropical</item>

        <item>Várzea dos Pocões</item>


        <item>Vila Brasilandia</item>
        <item>Vila Fátima</item>
        <item>Vila Jadete</item>


        <item>Pandeiros</item>
        <item>Vila Paula</item>
        <item>Vila Verde</item>
        <item>Vila Viana</item>


    </string-array>
    <string name="title_activity_galeria">Galeria</string>


</resources>
